// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regexp parser works for (?:a)+? 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Group',
                  'children': [
                    {
                      'text': '(',
                      'token': '(',
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'type': 'token'
                    },
                    {
                      'text': '?:',
                      'token': '?:',
                      'start': 1,
                      'end': 3,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 4,
                      'type': 'token'
                    },
                    {
                      'type': 'symbol',
                      'symbol': 'Expression',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'SubExpression',
                          'children': [
                            {
                              'type': 'symbol',
                              'symbol': 'ExpressionItem',
                              'children': [
                                {
                                  'type': 'symbol',
                                  'symbol': 'Match',
                                  'children': [
                                    {
                                      'type': 'symbol',
                                      'symbol': 'MatchItem',
                                      'children': [
                                        {
                                          'text': 'a',
                                          'token': 'char',
                                          'start': 3,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 4,
                                          'lastColumn': 5,
                                          'type': 'token'
                                        }
                                      ],
                                      'start': 3,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 4,
                                      'lastColumn': 5
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    },
                    {
                      'text': ')',
                      'token': ')',
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'type': 'token'
                    },
                    {
                      'type': 'symbol',
                      'symbol': 'Quantifier',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'QuantifierType',
                          'children': [
                            {
                              'text': '+',
                              'token': '+',
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'type': 'token'
                            }
                          ],
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7
                        },
                        {
                          'text': '?',
                          'token': '?',
                          'start': 6,
                          'end': 7,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 8,
                          'type': 'token'
                        }
                      ],
                      'start': 5,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 8
                    }
                  ],
                  'start': 0,
                  'firstLine': 1,
                  'firstColumn': 1
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for (?<a>c)b 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Group',
                  'children': [
                    {
                      'text': 'a',
                      'token': 'namedGroupPrefix',
                      'start': 0,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 6,
                      'type': 'token'
                    },
                    {
                      'type': 'symbol',
                      'symbol': 'Expression',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'SubExpression',
                          'children': [
                            {
                              'type': 'symbol',
                              'symbol': 'ExpressionItem',
                              'children': [
                                {
                                  'type': 'symbol',
                                  'symbol': 'Match',
                                  'children': [
                                    {
                                      'type': 'symbol',
                                      'symbol': 'MatchItem',
                                      'children': [
                                        {
                                          'text': 'c',
                                          'token': 'char',
                                          'start': 5,
                                          'end': 6,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 6,
                                          'lastColumn': 7,
                                          'type': 'token'
                                        }
                                      ],
                                      'start': 5,
                                      'end': 6,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 6,
                                      'lastColumn': 7
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    },
                    {
                      'text': ')',
                      'token': ')',
                      'start': 6,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 8,
                      'type': 'token'
                    }
                  ],
                  'start': 0,
                  'end': 7,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 8
                }
              ]
            },
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Match',
                  'children': [
                    {
                      'type': 'symbol',
                      'symbol': 'MatchItem',
                      'children': [
                        {
                          'text': 'b',
                          'token': 'char',
                          'start': 7,
                          'end': 8,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 8,
                          'lastColumn': 9,
                          'type': 'token'
                        }
                      ],
                      'start': 7,
                      'end': 8,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 8,
                      'lastColumn': 9
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for (a|b)*z 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Group',
                  'children': [
                    {
                      'text': '(',
                      'token': '(',
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2,
                      'type': 'token'
                    },
                    {
                      'type': 'symbol',
                      'symbol': 'Expression',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'SubExpression',
                          'children': [
                            {
                              'type': 'symbol',
                              'symbol': 'ExpressionItem',
                              'children': [
                                {
                                  'type': 'symbol',
                                  'symbol': 'Match',
                                  'children': [
                                    {
                                      'type': 'symbol',
                                      'symbol': 'MatchItem',
                                      'children': [
                                        {
                                          'text': 'a',
                                          'token': 'char',
                                          'start': 1,
                                          'end': 2,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 2,
                                          'lastColumn': 3,
                                          'type': 'token'
                                        }
                                      ],
                                      'start': 1,
                                      'end': 2,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 2,
                                      'lastColumn': 3
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        },
                        {
                          'text': '|',
                          'token': '|',
                          'start': 2,
                          'end': 3,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 3,
                          'lastColumn': 4,
                          'type': 'token'
                        },
                        {
                          'type': 'symbol',
                          'symbol': 'SubExpression',
                          'children': [
                            {
                              'type': 'symbol',
                              'symbol': 'ExpressionItem',
                              'children': [
                                {
                                  'type': 'symbol',
                                  'symbol': 'Match',
                                  'children': [
                                    {
                                      'type': 'symbol',
                                      'symbol': 'MatchItem',
                                      'children': [
                                        {
                                          'text': 'b',
                                          'token': 'char',
                                          'start': 3,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 4,
                                          'lastColumn': 5,
                                          'type': 'token'
                                        }
                                      ],
                                      'start': 3,
                                      'end': 4,
                                      'firstLine': 1,
                                      'lastLine': 1,
                                      'firstColumn': 4,
                                      'lastColumn': 5
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    },
                    {
                      'text': ')',
                      'token': ')',
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'type': 'token'
                    },
                    {
                      'type': 'symbol',
                      'symbol': 'Quantifier',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'QuantifierType',
                          'children': [
                            {
                              'text': '*',
                              'token': '*',
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'type': 'token'
                            }
                          ],
                          'start': 5,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 6,
                          'lastColumn': 7
                        }
                      ]
                    }
                  ],
                  'start': 0,
                  'firstLine': 1,
                  'firstColumn': 1
                }
              ]
            },
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Match',
                  'children': [
                    {
                      'type': 'symbol',
                      'symbol': 'MatchItem',
                      'children': [
                        {
                          'text': 'z',
                          'token': 'char',
                          'start': 6,
                          'end': 7,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 8,
                          'type': 'token'
                        }
                      ],
                      'start': 6,
                      'end': 7,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 8
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for [^a-z] 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Match',
                  'children': [
                    {
                      'type': 'symbol',
                      'symbol': 'MatchItem',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'MatchCharacterClass',
                          'children': [
                            {
                              'type': 'symbol',
                              'symbol': 'CharacterGroup',
                              'children': [
                                {
                                  'text': '[',
                                  'token': '[',
                                  'start': 0,
                                  'end': 1,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'type': 'token'
                                },
                                {
                                  'text': '^',
                                  'token': '^',
                                  'start': 1,
                                  'end': 2,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 2,
                                  'lastColumn': 3,
                                  'type': 'token'
                                },
                                {
                                  'type': 'symbol',
                                  'symbol': 'CharacterGroupInner',
                                  'children': [
                                    {
                                      'type': 'symbol',
                                      'symbol': 'CharacterGroupItem',
                                      'children': [
                                        {
                                          'type': 'symbol',
                                          'symbol': 'CharacterRange',
                                          'children': [
                                            {
                                              'text': 'a',
                                              'token': 'char',
                                              'start': 2,
                                              'end': 3,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 3,
                                              'lastColumn': 4,
                                              'type': 'token'
                                            },
                                            {
                                              'text': '-',
                                              'token': '-',
                                              'start': 3,
                                              'end': 4,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 4,
                                              'lastColumn': 5,
                                              'type': 'token'
                                            },
                                            {
                                              'text': 'z',
                                              'token': 'char',
                                              'start': 4,
                                              'end': 5,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 5,
                                              'lastColumn': 6,
                                              'type': 'token'
                                            }
                                          ],
                                          'start': 2,
                                          'end': 5,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 3,
                                          'lastColumn': 6
                                        }
                                      ]
                                    }
                                  ]
                                },
                                {
                                  'text': ']',
                                  'token': ']',
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7,
                                  'type': 'token'
                                }
                              ],
                              'start': 0,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 1,
                              'lastColumn': 7
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for [a-z] 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Match',
                  'children': [
                    {
                      'type': 'symbol',
                      'symbol': 'MatchItem',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'MatchCharacterClass',
                          'children': [
                            {
                              'type': 'symbol',
                              'symbol': 'CharacterGroup',
                              'children': [
                                {
                                  'text': '[',
                                  'token': '[',
                                  'start': 0,
                                  'end': 1,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 1,
                                  'lastColumn': 2,
                                  'type': 'token'
                                },
                                {
                                  'type': 'symbol',
                                  'symbol': 'CharacterGroupInner',
                                  'children': [
                                    {
                                      'type': 'symbol',
                                      'symbol': 'CharacterGroupItem',
                                      'children': [
                                        {
                                          'type': 'symbol',
                                          'symbol': 'CharacterRange',
                                          'children': [
                                            {
                                              'text': 'a',
                                              'token': 'char',
                                              'start': 1,
                                              'end': 2,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 2,
                                              'lastColumn': 3,
                                              'type': 'token'
                                            },
                                            {
                                              'text': '-',
                                              'token': '-',
                                              'start': 2,
                                              'end': 3,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 3,
                                              'lastColumn': 4,
                                              'type': 'token'
                                            },
                                            {
                                              'text': 'z',
                                              'token': 'char',
                                              'start': 3,
                                              'end': 4,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 4,
                                              'lastColumn': 5,
                                              'type': 'token'
                                            }
                                          ],
                                          'start': 1,
                                          'end': 4,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 2,
                                          'lastColumn': 5
                                        }
                                      ]
                                    },
                                    {
                                      'type': 'symbol',
                                      'symbol': 'CharacterGroupItem',
                                      'children': [
                                        {
                                          'type': 'symbol',
                                          'symbol': 'CharacterRange',
                                          'children': [
                                            {
                                              'text': '\\\\b',
                                              'token': 'char',
                                              'start': 4,
                                              'end': 5,
                                              'firstLine': 1,
                                              'lastLine': 1,
                                              'firstColumn': 5,
                                              'lastColumn': 6,
                                              'type': 'token'
                                            }
                                          ],
                                          'start': 4,
                                          'end': 5,
                                          'firstLine': 1,
                                          'lastLine': 1,
                                          'firstColumn': 5,
                                          'lastColumn': 6
                                        }
                                      ]
                                    }
                                  ]
                                },
                                {
                                  'text': ']',
                                  'token': ']',
                                  'start': 5,
                                  'end': 6,
                                  'firstLine': 1,
                                  'lastLine': 1,
                                  'firstColumn': 6,
                                  'lastColumn': 7,
                                  'type': 'token'
                                }
                              ],
                              'start': 0,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 1,
                              'lastColumn': 7
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for \\12\\b 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'text': '\\\\\\\\12',
                  'token': 'backreference',
                  'start': 0,
                  'end': 3,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 1,
                  'lastColumn': 4,
                  'type': 'token'
                }
              ],
              'start': 0,
              'end': 3,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 1,
              'lastColumn': 4
            },
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Anchor',
                  'children': [
                    {
                      'text': '\\\\\\\\b',
                      'token': 'anchorWordBoundary',
                      'start': 3,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 6,
                      'type': 'token'
                    }
                  ],
                  'start': 3,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 4,
                  'lastColumn': 6
                }
              ]
            }
          ],
          'start': 0,
          'firstLine': 1,
          'firstColumn': 1
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for ^a+z$ 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'text': '^',
      'token': '^',
      'start': 0,
      'end': 1,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 2,
      'type': 'token'
    },
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Match',
                  'children': [
                    {
                      'type': 'symbol',
                      'symbol': 'MatchItem',
                      'children': [
                        {
                          'text': 'a',
                          'token': 'char',
                          'start': 1,
                          'end': 2,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 3,
                          'type': 'token'
                        }
                      ],
                      'start': 1,
                      'end': 2,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 2,
                      'lastColumn': 3
                    },
                    {
                      'type': 'symbol',
                      'symbol': 'Quantifier',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'QuantifierType',
                          'children': [
                            {
                              'text': '+',
                              'token': '+',
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'type': 'token'
                            }
                          ],
                          'start': 2,
                          'end': 3,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 3,
                          'lastColumn': 4
                        }
                      ]
                    }
                  ],
                  'start': 1,
                  'firstLine': 1,
                  'firstColumn': 2
                }
              ]
            },
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Match',
                  'children': [
                    {
                      'type': 'symbol',
                      'symbol': 'MatchItem',
                      'children': [
                        {
                          'text': 'z',
                          'token': 'char',
                          'start': 3,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 4,
                          'lastColumn': 5,
                          'type': 'token'
                        }
                      ],
                      'start': 3,
                      'end': 4,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 4,
                      'lastColumn': 5
                    }
                  ]
                }
              ]
            },
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Anchor',
                  'children': [
                    {
                      'text': '$',
                      'token': '$',
                      'start': 4,
                      'end': 5,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 5,
                      'lastColumn': 6,
                      'type': 'token'
                    }
                  ],
                  'start': 4,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 5,
                  'lastColumn': 6
                }
              ]
            }
          ]
        }
      ]
    }
  ],
  'start': 0,
  'firstLine': 1,
  'firstColumn': 1
}"
`;

exports[`regexp parser works for a{1,2} 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Match',
                  'children': [
                    {
                      'type': 'symbol',
                      'symbol': 'MatchItem',
                      'children': [
                        {
                          'text': 'a',
                          'token': 'char',
                          'start': 0,
                          'end': 1,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 2,
                          'type': 'token'
                        }
                      ],
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2
                    },
                    {
                      'type': 'symbol',
                      'symbol': 'Quantifier',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'QuantifierType',
                          'children': [
                            {
                              'text': '{',
                              'token': '{',
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3,
                              'type': 'token'
                            },
                            {
                              'text': '1',
                              'token': 'int',
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'type': 'token'
                            },
                            {
                              'text': ',',
                              'token': ',',
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'type': 'token'
                            },
                            {
                              'text': '2',
                              'token': 'int',
                              'start': 4,
                              'end': 5,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 5,
                              'lastColumn': 6,
                              'type': 'token'
                            },
                            {
                              'text': '}',
                              'token': '}',
                              'start': 5,
                              'end': 6,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 6,
                              'lastColumn': 7,
                              'type': 'token'
                            }
                          ],
                          'start': 1,
                          'end': 6,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 7
                        }
                      ]
                    }
                  ],
                  'start': 0,
                  'firstLine': 1,
                  'firstColumn': 1
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`regexp parser works for a{1} 1`] = `
"{
  'type': 'symbol',
  'symbol': 'Regexp',
  'children': [
    {
      'type': 'symbol',
      'symbol': 'Expression',
      'children': [
        {
          'type': 'symbol',
          'symbol': 'SubExpression',
          'children': [
            {
              'type': 'symbol',
              'symbol': 'ExpressionItem',
              'children': [
                {
                  'type': 'symbol',
                  'symbol': 'Match',
                  'children': [
                    {
                      'type': 'symbol',
                      'symbol': 'MatchItem',
                      'children': [
                        {
                          'text': 'a',
                          'token': 'char',
                          'start': 0,
                          'end': 1,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 1,
                          'lastColumn': 2,
                          'type': 'token'
                        }
                      ],
                      'start': 0,
                      'end': 1,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 1,
                      'lastColumn': 2
                    },
                    {
                      'type': 'symbol',
                      'symbol': 'Quantifier',
                      'children': [
                        {
                          'type': 'symbol',
                          'symbol': 'QuantifierType',
                          'children': [
                            {
                              'text': '{',
                              'token': '{',
                              'start': 1,
                              'end': 2,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 2,
                              'lastColumn': 3,
                              'type': 'token'
                            },
                            {
                              'text': '1',
                              'token': 'int',
                              'start': 2,
                              'end': 3,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 3,
                              'lastColumn': 4,
                              'type': 'token'
                            },
                            {
                              'text': '}',
                              'token': '}',
                              'start': 3,
                              'end': 4,
                              'firstLine': 1,
                              'lastLine': 1,
                              'firstColumn': 4,
                              'lastColumn': 5,
                              'type': 'token'
                            }
                          ],
                          'start': 1,
                          'end': 4,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 2,
                          'lastColumn': 5
                        }
                      ]
                    }
                  ],
                  'start': 0,
                  'firstLine': 1,
                  'firstColumn': 1
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
